other/ensure-production-matches-staging/.chainsaw-test/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment01
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: busybox:1.35
        name: busybox
        command: ["sleep","3600"]
      - image: busybox:1.28
        name: busybox02
        command: ["sleep","3600"]
